--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,16 @@
   height: 150px;
   padding: 20px;
   color: white;
-  margin-bottom: 10px;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+.canvas {
+  background-color: white;
 }
 
 .App-intro {
